--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha ./test/test.js",
-    "start-dev": "./node_modules/.bin/nodemon --watch src --ext js,graphql --exec babel-node  src/index.js",
-    "build": "babel src -d build; cp .env build; cp src/schema.graphql build",
+    "test": "./node_modules/.bin/mocha --require @babel/register",
+    "start-dev": "nodemon --exec babel-node ./src/index.js",
+    "build": "babel src -d build",
     "start": "npm run build && node build/index.js"
   },
   "repository": {
@@ -23,8 +23,12 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.0",
+    "@babel/node": "^7.8.7",
     "@babel/preset-env": "^7.9.5",
-    "babel-cli": "^6.26.0",
+    "@babel/register": "^7.9.0",
+    "chai": "^4.2.0",
     "mocha": "^7.1.1",
     "nodemon": "^2.0.3",
     "supertest": "^4.0.2"
