--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha --require @babel/register",
+    "test": "./node_modules/.bin/mocha --require @babel/register --exit",
     "start-dev": "nodemon --exec babel-node ./src/index.js",
     "build": "babel src -d build",
     "start": "npm run build && node build/index.js"
@@ -29,8 +29,8 @@
     "@babel/preset-env": "^7.9.5",
     "@babel/register": "^7.9.0",
     "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "mocha": "^7.1.1",
-    "nodemon": "^2.0.3",
-    "supertest": "^4.0.2"
+    "nodemon": "^2.0.3"
   }
 }
